add players is functioning and works well above the hood

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="./images/new.png" alt="" width="250">
                 <h1 id="new-round-header">New Round</h1>
                 <p id="new-round-par">Add the players that will be participating in the new round.</p>
-                <table>
+                <table id="new-round-table">
                     <caption>
                         Players
                     </caption>
@@ -22,7 +22,7 @@
                             <td></td>
                             <td>Add player</td>
                             <td>                
-                                <button class="add-player__button">                                        
+                                <button type="button" id="add-player-button">                                        
                                     <span>&#43</span>
                                 </button>                            
                             </td>
@@ -36,5 +36,6 @@
         <section class="score-card" hidden></section>
         <section class="round-summary" hidden></section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
