got the score tracker pretty much running full. It can now take scores, update them if you go back and change it, and the object that hold data is updated every time a new score is put in or updated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <section class="new-round" aria-labelledby="new-round-header" aria-describedby="new-round-par">
+        <section class="new-round" aria-labelledby="new-round-header" aria-describedby="new-round-par" id="new-round">
             <div class="new-round__container">
                 <img class="new-round__hero-img" src="./images/new.png" alt="" width="250">
                 <h1 id="new-round-header">New Round</h1>
@@ -32,25 +32,17 @@
                 <button type="button" class="new-round__start-round" id="start-round-btn">Start Round</button>
             </div>
         </section>
-        <section class="in-game" >
+        <section class="in-game" id="in-game" hidden>
 
             <div class="in-game__container">
                 <div class="in-game__target-container">
                     <div class="highlighter"></div>
                     <div class="in-game__target-number-container">
                         
-                        <h1 class="in-game__target-number">Target # <span class="target#">1</span></h1>
+                        <h1 class="in-game__target-number">Target # <span class="target#" id="target-number-span"></span></h1>
                         <button type="button" class="in-game__target-expand-button" id="target-expand-btn"><img src="./images/down-arrow-6402.png" alt="" width="16"></button>
                     </div>
-                    <ol class="in-game__target-select-ol">
-                        <li class="in-game__target-select">1</li>
-                        <li class="in-game__target-select">2</li>
-                        <li class="in-game__target-select selected">3</li>
-                        <li class="in-game__target-select">4</li>
-                        <li class="in-game__target-select">5</li>
-                        <li class="in-game__target-select">6</li>
-                        <li class="in-game__target-select">7</li>
-                        <li class="in-game__target-select">8</li>
+                    <ol class="in-game__target-select-ol" id="target-list">
                     </ol>
                     
                 </div>
@@ -67,46 +59,6 @@
                         <p class="in-game__target-score-score caption">Score</p>
                     </div>
                     <div class="in-game__score-setter" id="score-setter-container">
-                        <!-- <div class="in-game__target-score-row">
-                            <p class="in-game__target-score-id">1</p>
-                            <p class="in-game__target-score-player">Isaac</p>
-                            <div class="in-game__target-score-buttons">
-                                <button type="button" class="in-game__target-score" value="10">10</button>
-                                <button type="button" class="in-game__target-score" value="8">8</button>
-                                <button type="button" class="in-game__target-score" value="5">5</button>
-                                <button type="button" class="in-game__target-score selected" value="0">0</button>
-                            </div>
-                        </div>
-                        <div class="in-game__target-score-row">
-                            <p class="in-game__target-score-id">1</p>
-                            <p class="in-game__target-score-player">Isaac</p>
-                            <div class="in-game__target-score-buttons">
-                                <button type="button" class="in-game__target-score selected" value="10">10</button>
-                                <button type="button" class="in-game__target-score" value="8">8</button>
-                                <button type="button" class="in-game__target-score" value="5">5</button>
-                                <button type="button" class="in-game__target-score" value="0">0</button>
-                            </div>
-                        </div>
-                        <div class="in-game__target-score-row">
-                            <p class="in-game__target-score-id">1</p>
-                            <p class="in-game__target-score-player">Isaac</p>
-                            <div class="in-game__target-score-buttons">
-                                <button type="button" class="in-game__target-score" value="10">10</button>
-                                <button type="button" class="in-game__target-score selected" value="8">8</button>
-                                <button type="button" class="in-game__target-score" value="5">5</button>
-                                <button type="button" class="in-game__target-score" value="0">0</button>
-                            </div>
-                        </div>
-                        <div class="in-game__target-score-row">
-                            <p class="in-game__target-score-id">1</p>
-                            <p class="in-game__target-score-player">Isaac</p>
-                            <div class="in-game__target-score-buttons">
-                                <button type="button" class="in-game__target-score" value="10">10</button>
-                                <button type="button" class="in-game__target-score" value="8">8</button>
-                                <button type="button" class="in-game__target-score selected" value="5">5</button>
-                                <button type="button" class="in-game__target-score" value="0">0</button>
-                            </div>
-                        </div> -->
                     </div>
                     <div class="in-game__target-score-row closer"></div>
                 </div>
@@ -133,7 +85,6 @@
                         <p class="in-game__scorecard-name-player">Isaac</p>
                         <p class="in-game__scorecard-number-player">10</p>
                         <p class="in-game__scorecard-number-player">10</p>
-                        <p class="in-game__scorecard-number-player">10</p>
                     </div>
                     <div class="in-game__scorecard-row-player row">
                         <p class="in-game__scorecard-name-player">Isaac</p>
@@ -149,7 +100,7 @@
                 </dialog>
 
                 <div class="in-game__footer-container">
-                    <button type="button" class="in-game__previous-target">
+                    <button type="button" class="in-game__previous-target" onclick="selectsPreviousTarget()">
                         <img src="./images/previous-arrow.png" alt="">
                         <p>Previous Target</p>
                     </button>
@@ -160,7 +111,7 @@
                     <button type="button" class="in-game__end-game">
                         <p>END ROUND</p>
                     </button>
-                    <button type="button" class="in-game__next-target">
+                    <button type="button" class="in-game__next-target" onclick="selectsNextTarget()">
                         <img src="./images/next-arrow.png" alt="">
                         <p>Next Target</p>
                     </button>
