score tracker and scorecard is working good, tracking score, adding total

--- a/index.html
+++ b/index.html
@@ -80,13 +80,16 @@
 
                 <dialog class="in-game__scorecard-container" id="scorecard">
                     <!-- different than how I did it on the tagret-score caption to see which way might work better in the future -->
-                    <div class="in-game__scorecard-row-target row" id="scorecard-target-row">
-                        <p class="in-game__scorecard-name-target">Target</p>
+                    <div class="in-game__scorecard-not-total">
+                        <div class="in-game__scorecard-row-target row" id="scorecard-target-row">
+                            <p class="in-game__scorecard-name-target">Target</p>
+                        </div>
+                        <div class="in-game__scorecard-row-distance row" id="scorecard-distance-row">
+                            <p class="in-game__scorecard-name-distance">Distance</p>
+                        </div>
+                        <div class="in-game__scorecard-player-container" id="scorecard-player-container">
+                        </div>
                     </div>
-                    <div class="in-game__scorecard-row-distance row" id="scorecard-distance-row">
-                        <p class="in-game__scorecard-name-distance">Distance</p>
-                    </div>
-                    <div class="in-game__scorecard-player-container" id="scorecard-player-container"></div>
                     <div class="in-game__scorecard-total" id="scorecard-total">
                         <p class="in-game__scorecard-name-total">Total</p>
                     </div>
