distance multiplier works on scorecard

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                         </div>
                     </div>
                 </div>
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider"></span>
+                </label>
                 <button type="button" class="new-round__start-round" id="start-round-btn">Start Round</button>
             </div>
         </section>
@@ -90,8 +94,13 @@
                         <div class="in-game__scorecard-player-container" id="scorecard-player-container">
                         </div>
                     </div>
-                    <div class="in-game__scorecard-total" id="scorecard-total">
-                        <p class="in-game__scorecard-name-total">Total</p>
+                    <div class="in-game__scorecard-total">
+                        <div class="in-game__scorecard-net-container" id="scorecard-net">
+                            <p class="in-game__scorecard-name-total">Total</p>
+                        </div>
+                        <div class="in-game__scorecard-multiplied-container" id="scorecard-multiplied">
+                            <p class="in-game__scorecard-multiplier-name">Yards X</p>
+                        </div>
                     </div>
                 </dialog>
 
