--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <div class="in-game__yardage-container">
                     <label class="in-game__yardage-label" for="yard-input" >Distance to target:</label>
-                    <div class="in-game__yardage-input"><input type="number" name="yard-input" id="yard-input"><label for="yard-input">Yards</label></div>
+                    <div class="in-game__yardage-input"><input type="text" inputmode="numeric" name="yard-input" id="yard-input"><label for="yard-input">Yards</label></div>
                 </div>
                 
                 <div class="in-game__target-score-container" >
