--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <section class="new-round" aria-labelledby="new-round-header" aria-describedby="new-round-par" id="new-round">
+        <section class="new-round" aria-labelledby="new-round-header" aria-describedby="new-round-par" id="new-round" hidden>
             <div class="new-round__container">
                 <img class="new-round__hero-img" src="./images/new.png" alt="" width="250">
                 <h1 id="new-round-header">New Round</h1>
@@ -139,7 +139,7 @@
                 </div>
             </div>
         </section>
-        <section class="round-summary" id="round-summary" hidden>
+        <section class="round-summary" id="round-summary" >
             <div class="round-summary__container">
                 <div class="round-summary__results">
                     <h2 class="round-summary__results-header">Round Results</h2>
@@ -147,14 +147,17 @@
                         <!-- change to clip path podium -->
                         <div class="round-summary__podium" id="podium-2">
                             <p class="round-summary__podium-name"></p>
+                            <div class="round-summary__podium-stand"></div>
                             <div class="round-summary__podium-step">2nd</div>
                         </div>
                         <div class="round-summary__podium" id="podium-1">
                             <p class="round-summary__podium-name"></p>
+                            <div class="round-summary__podium-stand"></div>
                             <div class="round-summary__podium-step">1st</div>
                         </div>
                         <div class="round-summary__podium" id="podium-3">
                             <p class="round-summary__podium-name"></p>
+                            <div class="round-summary__podium-stand"></div>
                             <div class="round-summary__podium-step">3rd</div>
                         </div>
                     </div>
