--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <main>
-        <section class="new-round" aria-labelledby="new-round-header" aria-describedby="new-round-par" id="new-round" hidden>
+        <section class="new-round" aria-labelledby="new-round-header" aria-describedby="new-round-par" id="new-round" >
             <div class="new-round__container">
-                <img class="new-round__hero-img" src="./images/new.png" alt="" width="250">
-                <h1 id="new-round-header">New Round</h1>
-                <p id="new-round-par">Add the players that will be participating in the new round.</p>
+                <div class="new-round__img">🏹</div>
+                <h1 class="new-round-header">BULLSEYE LEDGER</h1>
+                <p id="new-round-par"><span>Simple Scoring.</span><span>Instant Results.</span></p>
                 <div class="new-round__table-container" id="new-round-table">
                     <h2 class="new-round__table-header">
                         Players
@@ -139,7 +139,7 @@
                 </div>
             </div>
         </section>
-        <section class="round-summary" id="round-summary" >
+        <section class="round-summary" id="round-summary" hidden>
             <div class="round-summary__container">
                 <div class="round-summary__results">
                     <h2 class="round-summary__results-header">Round Results</h2>
