--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <section class="new-round" aria-labelledby="new-round-header" aria-describedby="new-round-par" id="new-round" hidden >
+        <section class="new-round" aria-labelledby="new-round-header" aria-describedby="new-round-par" id="new-round" >
             <div class="new-round__container">
                 <div class="new-round__img">🏹</div>
                 <h1 class="new-round-header | neutral-text">BULLSEYE LEDGER</h1>
@@ -41,7 +41,7 @@
                 <button type="button" class="new-round__start-round | dark-text" id="start-round-btn">Start Round</button>
             </div>
         </section>
-        <section class="in-game" id="in-game" >
+        <section class="in-game" id="in-game" hidden>
 
             <div class="in-game__container">
                 <div class="in-game__backdrop scorecard" hidden></div>
