added secondary fonts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="new-round__container">
                 <div class="new-round__img">🏹</div>
                 <h1 class="new-round-header | neutral-text">BULLSEYE LEDGER</h1>
-                <p id="new-round-par"><span class="neutral-text">Simple Scoring.</span><span class="neutral-text">Instant Results.</span></p>
+                <p id="new-round-par"><span class="neutral-text montserrat">SIMPLE SCORING.</span><span class="neutral-text montserrat">INSTANT RESULTS.</span></p>
                 <div class="new-round__table-container" id="new-round-table">
                     <h2 class="new-round__table-header | dark-text">
                         Players
@@ -63,8 +63,8 @@
                 </div>
 
                 <div class="in-game__yardage-container">
-                    <label class="in-game__yardage-label | neutral-text" for="yard-input" >Distance to target:</label>
-                    <div class="in-game__yardage-input"><input type="text" inputmode="numeric" name="yard-input" id="yard-input"><label class="dark-text" for="yard-input">Yards</label></div>
+                    <label class="in-game__yardage-label | neutral-text montserrat" for="yard-input" >Distance to target:</label>
+                    <div class="in-game__yardage-input"><input class="montserrat" type="text" inputmode="numeric" name="yard-input" id="yard-input"><label class="dark-text montserrat" for="yard-input">Yards</label></div>
                     <div class="in-game__yardage-error" id="yardage-error-msg">
                         <p class="in-game__yardage-error-msg">Please enter a distance for this target
                         </p>
