--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <section class="new-round" aria-labelledby="new-round-header" aria-describedby="new-round-par" id="new-round" >
+        <section class="new-round" aria-labelledby="new-round-header" aria-describedby="new-round-par" id="new-round">
             <div class="new-round__container">
                 <div class="new-round__img">🏹</div>
                 <h1 class="new-round-header | neutral-text">BULLSEYE LEDGER</h1>
@@ -133,21 +133,21 @@
         <section class="round-summary" id="round-summary" hidden>
             <div class="round-summary__container">
                 <div class="round-summary__results">
-                    <h2 class="round-summary__results-header">Round Results</h2>
+                    <h2 class="round-summary__results-header neutral-text">Round Results</h2>
                     <div class="round-summary__podium-container">
                         <!-- change to clip path podium -->
                         <div class="round-summary__podium" id="podium-2">
-                            <p class="round-summary__podium-name"></p>
+                            <p class="round-summary__podium-name neutral-text"></p>
                             <div class="round-summary__podium-stand"></div>
                             <div class="round-summary__podium-step">2nd</div>
                         </div>
                         <div class="round-summary__podium" id="podium-1">
-                            <p class="round-summary__podium-name"></p>
+                            <p class="round-summary__podium-name neutral-text"></p>
                             <div class="round-summary__podium-stand"></div>
                             <div class="round-summary__podium-step">1st</div>
                         </div>
                         <div class="round-summary__podium" id="podium-3">
-                            <p class="round-summary__podium-name"></p>
+                            <p class="round-summary__podium-name neutral-text"></p>
                             <div class="round-summary__podium-stand"></div>
                             <div class="round-summary__podium-step">3rd</div>
                         </div>
@@ -155,8 +155,8 @@
                     <div class="round-summary__results-table" id="results-table">
                     </div>
                 </div>
-                <div class="round-summary__highlights">
-                    <h2 class="round-summary__highlights-header">Highlights</h2>
+                <div class="round-summary__highlights neutral-text montserrat">
+                    <h2 class="round-summary__highlights-header playfair">Highlights</h2>
                     <div class="round-summary__highlights-most-tens" id="most-tens">
                         <p></p>
                     </div>
